# drone-convert-dhall

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .stylish-haskell.yaml  LICENSE  default.nix  drone-convert-dhall.cabal  drone-convert-dhall.hs  drone-convert-dhall.nix  hie.yaml  justfile  package.yaml  shell.nix  stack.yaml
dhall/: Prelude.dhall  enums.dhall  misc.dhall  package.dhall  pipeline.dhall  pipeline_common.dhall  pipeline_docker.dhall  pipeline_exec.dhall  resource.dhall  secret.dhall  step.dhall  utils.dhall
nix/: sources.json
src/: Main.hs
src/DroneDhall/: Models.hs
tests/: Main.hs  Models.hs
