cabal-version: 3.0
name:          drone-convert-dhall
version:       0.1.0
synopsis:      Add support for Drone pipelines configuration in dhall
description:
  A Drone plugin to convert *.dhall file to proper yaml description

category:      Development
author:        Sergey Petrov
maintainer:    me@pr0ger.org
license:       MIT
license-file:  LICENSE
tested-with:   GHC ==8.10.1

source-repository head
  type:     git
  location: git://github.com/Pr0Ger/drone-convert-dhall.git

library drone-dhall
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  DroneDhall.Models
  build-depends:
    , aeson
    , base   >=4.7 && <5
    , dhall
    , dhall-yaml
    , text

executable drone-convert-dhall
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:
    , aeson
    , base    >=4.7 && <5
    , drone-dhall
    , dhall-yaml
    , scotty
    , text
    , wai-extra
  other-modules: DroneDhall.Models

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          Main.hs
  other-modules:    Models
  build-depends:
    , aeson
    , base         >=4     && <5
    , drone-dhall
    , tasty        >=1.3.1
    , tasty-hspec
